syntax = "proto3";

package proto;

option go_package = "./;proto";

message MonsterSummonTagNotify {
  enum CmdId {
    option allow_alias = true;
    NONE               = 0;
    CMD_ID             = 1372;
    ENET_CHANNEL_ID    = 0;
    ENET_IS_RELIABLE   = 1;
  }

  map<uint32, uint32> summon_tag_map    = 1;
  uint32              monster_entity_id = 8;
}
